--- a/points2cities.ipynb
+++ b/points2cities.ipynb
@@ -24,9 +24,19 @@
     "import geopandas as gpd\n",
     "import osm2geojson\n",
     "import geojson\n",
+    "import shapely\n",
     "from shapely import wkt\n",
     "from shapely.geometry import Point, Polygon, LineString\n",
     "from geopy.distance import geodesic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.options.display.max_rows = 100"
    ]
   },
   {
@@ -682,7 +692,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Points to Cities"
+    "# Points To Cities"
    ]
   },
   {
