--- a/OSM_cities.ipynb
+++ b/OSM_cities.ipynb
@@ -24,6 +24,7 @@
     "import geopandas as gpd\n",
     "import osm2geojson\n",
     "import geojson\n",
+    "import shapely\n",
     "from shapely import wkt\n",
     "from shapely.geometry import Point, Polygon, LineString\n",
     "from geopy.distance import geodesic"
