--- a/OSM_cities.ipynb
+++ b/OSM_cities.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,16 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
-    "osm_regions = response_regions.json()"
+    "data_osm_regions = response_regions.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -140,18 +140,18 @@
        "  'wikipedia': 'ru:Приморский край'}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "osm_regions['elements'][0]"
+    "data_osm_regions['elements'][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -160,28 +160,28 @@
        "85"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(osm_regions['elements'])"
+    "len(data_osm_regions['elements'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"osm_regions.json\", \"w\") as f:\n",
-    "    json.dump(data_8, f)"
+    "with open(\"data_osm_regions.json\", \"w\") as f:\n",
+    "    json.dump(data_osm_regions, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
     "name_regions = []\n",
     "population_regions = []\n",
     "\n",
-    "for element in osm_regions['elements']:\n",
+    "for element in data_osm_regions['elements']:\n",
     "  \n",
     "    if element['type'] == 'node':\n",
     "        \n",
@@ -220,16 +220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
-    "osm_regions = pd.DataFrame(data={'type':type_regions,'lon':lon_regions,'lat':lat_regions,'name':name_regions,'population':population_regions})"
+    "data_osm_regions = pd.DataFrame(data={'type':type_regions,'lon':lon_regions,'lat':lat_regions,'name':name_regions,'population':population_regions})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -1121,20 +1121,20 @@
        "84       None  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "osm_regions\n",
+    "data_osm_regions\n",
     "# Отутствует 'Дагестан'\n",
     "# 'Республика Бурятия', 'Республика Коми' называются 'Бурятия' и 'Коми'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1143,22 +1143,22 @@
        "array(['node'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "osm_regions['type'].unique()"
+    "data_osm_regions['type'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
-    "osm_regions.to_csv('osm_regions.csv', sep=';')"
+    "data_osm_regions.to_csv('data_osm_regions.csv', sep=';')"
    ]
   },
   {
@@ -1174,7 +1174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "directory = './osm_cities'"
+    "directory = './data_osm_cities'"
    ]
   },
   {
@@ -1219,13 +1219,13 @@
     "                                    })\n",
     "\n",
     "        try:\n",
-    "            _osm_cities = _response.json()\n",
+    "            _data_osm_cities = _response.json()\n",
     "        except Exception:\n",
-    "            _osm_cities = None\n",
+    "            _data_osm_cities = None\n",
     "\n",
-    "        if _osm_cities:           \n",
+    "        if _data_osm_cities:           \n",
     "            with open(f'{directory}/{r}.json', \"w\") as f:\n",
-    "                json.dump(_osm_cities, f)"
+    "                json.dump(_data_osm_cities, f)"
    ]
   },
   {
@@ -1367,7 +1367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "osm_cities = pd.DataFrame(data={'type':type_,'lon':lon_,'lat':lat_,'region':region_,'region2':region2_,'name':name_,'population':population_})"
+    "data_osm_cities = pd.DataFrame(data={'type':type_,'lon':lon_,'lat':lat_,'region':region_,'region2':region2_,'name':name_,'population':population_})"
    ]
   },
   {
@@ -1397,7 +1397,7 @@
     }
    ],
    "source": [
-    "osm_cities.info()"
+    "data_osm_cities.info()"
    ]
   },
   {
@@ -1504,7 +1504,7 @@
     }
    ],
    "source": [
-    "osm_cities.groupby('region').size()"
+    "data_osm_cities.groupby('region').size()"
    ]
   },
   {
@@ -1530,7 +1530,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "osm_cities['population'] = osm_cities['population'].apply(f_space)"
+    "data_osm_cities['population'] = data_osm_cities['population'].apply(f_space)"
    ]
   },
   {
@@ -1539,7 +1539,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "osm_cities['population'] = pd.to_numeric(osm_cities['population'], downcast='float')"
+    "data_osm_cities['population'] = pd.to_numeric(data_osm_cities['population'], downcast='float')"
    ]
   },
   {
@@ -1548,7 +1548,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "osm_cities.to_csv('osm_cities.csv', sep=';')"
+    "data_osm_cities.to_csv('data_osm_cities.csv', sep=';')"
    ]
   },
   {
@@ -1560,16 +1560,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
-    "osm_cities = pd.read_csv('osm_cities.csv', sep=';', low_memory=False)"
+    "data_osm_cities = pd.read_csv('data_osm_cities.csv', sep=';', low_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1578,18 +1578,18 @@
        "(5386, 8)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "osm_cities.shape"
+    "data_osm_cities.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1699,18 +1699,18 @@
        "4       Мирный      4210.0  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "osm_cities.head()"
+    "data_osm_cities.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1719,18 +1719,18 @@
        "86"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(osm_cities.groupby('region').size())"
+    "len(data_osm_cities.groupby('region').size())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1826,18 +1826,18 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "osm_cities.groupby('region').size()"
+    "data_osm_cities.groupby('region').size()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1934,36 +1934,36 @@
        "3644  Республика Крым  Керчь         NaN  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "osm_cities.loc[osm_cities['name']=='Керчь']"
+    "data_osm_cities.loc[data_osm_cities['name']=='Керчь']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
-    "osm_cities = osm_cities.loc[osm_cities['region']!='Автономна Республіка Крим']"
+    "data_osm_cities = data_osm_cities.loc[data_osm_cities['region']!='Автономна Республіка Крим']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
-    "osm_cities = osm_cities[['lon', 'lat', 'region', 'name', 'population']].groupby(['region', 'name']).mean().reset_index()"
+    "data_osm_cities = data_osm_cities[['lon', 'lat', 'region', 'name', 'population']].groupby(['region', 'name']).mean().reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -2012,18 +2012,18 @@
        "1751  Республика Крым  Керчь  36.47381  45.328711    148932.0"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "osm_cities.loc[osm_cities['name']=='Керчь']"
+    "data_osm_cities.loc[data_osm_cities['name']=='Керчь']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -2081,18 +2081,18 @@
        "1176  Московская область  Москва  37.628965  55.724540         NaN"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "osm_cities.loc[osm_cities['name']=='Москва']"
+    "data_osm_cities.loc[data_osm_cities['name']=='Москва']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -2150,31 +2150,31 @@
        "1993        Санкт-Петербург  Санкт-Петербург  30.310742  59.928087   5381736.0"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "osm_cities.loc[osm_cities['name']=='Санкт-Петербург']"
+    "data_osm_cities.loc[data_osm_cities['name']=='Санкт-Петербург']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
-    "osm_cities.drop([1176, 1019], inplace=True)"
+    "data_osm_cities.drop([1176, 1019], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
-    "osm_cities.rename(columns={'name':'city_name', 'lon':'city_lon', 'lat':'city_lat', 'population':'city_population'}, inplace=True)"
+    "data_osm_cities.rename(columns={'name':'city_name', 'lon':'city_lon', 'lat':'city_lat', 'population':'city_population'}, inplace=True)"
    ]
   },
   {
@@ -2185,7 +2185,7 @@
    "source": [
     "map_osm_cities = folium.Map(width=1200, height=700, zoom_start=5, location=[55.75, 37.60])\n",
     "\n",
-    "for index, row in osm_cities.iterrows():\n",
+    "for index, row in data_osm_cities.iterrows():\n",
     "    try:\n",
     "        radius = int(math.log(float(row['city_population'])/50000+1)) + 1\n",
     "    except Exception:\n",
@@ -2219,12 +2219,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('osm_cities.pickle', 'wb') as _f:\n",
-    "    pickle.dump(osm_cities, _f, protocol=pickle.HIGHEST_PROTOCOL)"
+    "with open('data_osm_cities.pickle', 'wb') as _f:\n",
+    "    pickle.dump(data_osm_cities, _f, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data_osm_cities_2.pickle', 'wb') as _f:\n",
+    "    pickle.dump(data_osm_cities, _f)"
    ]
   },
   {
@@ -2233,8 +2243,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('osm_cities.pickle', 'rb') as _f:\n",
-    "    osm_cities = pickle.load(_f)"
+    "with open('data_osm_cities.pickle', 'rb') as _f:\n",
+    "    data_osm_cities = pickle.load(_f)"
    ]
   },
   {
@@ -2246,16 +2256,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_regions = pd.read_excel('spr_regions.xlsx')"
+    "data_regions = pd.read_excel('data_regions.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -2264,7 +2274,7 @@
        "(85, 7)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2275,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -2379,7 +2389,7 @@
        "4  Северо-Западный  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2390,7 +2400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2399,7 +2409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2408,16 +2418,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_regions = data_regions.merge(osm_cities, left_on='city_name', right_on='city_name', how='left')"
+    "data_regions = data_regions.merge(data_osm_cities, left_on='city_name', right_on='city_name', how='left')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -2426,7 +2436,7 @@
        "(87, 12)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2437,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2446,7 +2456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -2651,7 +2661,7 @@
        "60          5381736.0  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2663,7 +2673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2672,7 +2682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -4427,7 +4437,7 @@
        "84           603961.0  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4438,12 +4448,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('data_regions.pickle', 'wb') as _f:\n",
     "    pickle.dump(data_regions, _f, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data_regions_2.pickle', 'wb') as _f:\n",
+    "    pickle.dump(data_regions, _f)"
    ]
   },
   {
