--- a/points2cities.ipynb
+++ b/points2cities.ipynb
@@ -703,8 +703,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 39.1 ms, sys: 31.3 ms, total: 70.4 ms\n",
-      "Wall time: 68.7 ms\n"
+      "CPU times: user 27.4 ms, sys: 39.3 ms, total: 66.8 ms\n",
+      "Wall time: 65.3 ms\n"
      ]
     }
    ],
@@ -885,8 +885,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11.7 ms, sys: 0 ns, total: 11.7 ms\n",
-      "Wall time: 10 ms\n"
+      "CPU times: user 6.6 ms, sys: 2.22 ms, total: 8.82 ms\n",
+      "Wall time: 7.37 ms\n"
      ]
     }
    ],
@@ -934,8 +934,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10.6 ms, sys: 2.7 ms, total: 13.3 ms\n",
-      "Wall time: 10.9 ms\n"
+      "CPU times: user 11.3 ms, sys: 0 ns, total: 11.3 ms\n",
+      "Wall time: 9.42 ms\n"
      ]
     }
    ],
@@ -978,6 +978,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f_dist(df, col_lat_1, col_lon_1, col_lat_2, col_lon_2, col_dist):\n",
+    "    \n",
+    "    lat_1 = math.pi/180 * df[col_lat_1].to_numpy()\n",
+    "    lon_1 = math.pi/180 * df[col_lon_1].to_numpy()\n",
+    "    lat_2 = math.pi/180 * df[col_lat_2].to_numpy()\n",
+    "    lon_2 = math.pi/180 * df[col_lon_2].to_numpy()\n",
+    "    \n",
+    "    dlon = lon_1 - lon_2\n",
+    "    dlat = lat_1 - lat_2\n",
+    "    a = np.sin(dlat/2)**2 + np.cos(lat_1) * np.cos(lat_2) * np.sin(dlon/2)**2\n",
+    "    c = 2 * np.arcsin(np.sqrt(a))\n",
+    "    dist = c * 6371.009\n",
+    "    \n",
+    "    df[col_dist] = dist\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -985,18 +1009,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 12.8 ms, sys: 4.2 ms, total: 17 ms\n",
-      "Wall time: 13.5 ms\n"
+      "CPU times: user 8.22 ms, sys: 220 µs, total: 8.44 ms\n",
+      "Wall time: 5.66 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "data_points2cities['dlon'] = math.pi/180 * (data_points2cities['city_lon'] - data_points2cities['lon'])\n",
-    "data_points2cities['dlat'] = math.pi/180 * (data_points2cities['city_lat'] - data_points2cities['lat'])\n",
-    "data_points2cities['a'] = np.sin(data_points2cities['dlat']/2)**2 + np.cos(math.pi/180 * data_points2cities['city_lat']) * np.cos(math.pi/180 * data_points2cities['lat']) * np.sin(data_points2cities['dlon']/2)**2\n",
-    "data_points2cities['c'] = 2 * np.arcsin(np.sqrt(data_points2cities['a']))\n",
-    "data_points2cities['dist'] = data_points2cities['c'] * 6371.009"
+    "data_points2cities = f_dist(data_points2cities, 'city_lat', 'city_lon', 'lat', 'lon', 'dist')"
    ]
   },
   {
@@ -1036,10 +1056,6 @@
        "      <th>city_lat</th>\n",
        "      <th>city_population</th>\n",
        "      <th>simplifier_sign</th>\n",
-       "      <th>dlon</th>\n",
-       "      <th>dlat</th>\n",
-       "      <th>a</th>\n",
-       "      <th>c</th>\n",
        "      <th>dist</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1057,10 +1073,6 @@
        "      <td>55.893298</td>\n",
        "      <td>15616.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>-0.037089</td>\n",
-       "      <td>0.021588</td>\n",
-       "      <td>0.000228</td>\n",
-       "      <td>0.030204</td>\n",
        "      <td>192.427263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1076,10 +1088,6 @@
        "      <td>54.405749</td>\n",
        "      <td>5819.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.012419</td>\n",
-       "      <td>-0.004374</td>\n",
-       "      <td>0.000018</td>\n",
-       "      <td>0.008430</td>\n",
        "      <td>53.708584</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1095,10 +1103,6 @@
        "      <td>53.335749</td>\n",
        "      <td>7634.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.042846</td>\n",
-       "      <td>-0.023049</td>\n",
-       "      <td>0.000291</td>\n",
-       "      <td>0.034138</td>\n",
        "      <td>217.491505</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1114,10 +1118,6 @@
        "      <td>56.089665</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.009032</td>\n",
-       "      <td>0.025015</td>\n",
-       "      <td>0.000163</td>\n",
-       "      <td>0.025536</td>\n",
        "      <td>162.692305</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1133,10 +1133,6 @@
        "      <td>52.594139</td>\n",
        "      <td>17475.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.039233</td>\n",
-       "      <td>-0.035993</td>\n",
-       "      <td>0.000459</td>\n",
-       "      <td>0.042854</td>\n",
        "      <td>273.022865</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1158,19 +1154,12 @@
        "145  [54.656384, 56.06246]  54.656384  56.06246  Башкортостан         Аскино   \n",
        "146  [54.656384, 56.06246]  54.656384  56.06246  Башкортостан         Баймак   \n",
        "\n",
-       "      city_lon   city_lat  city_population  simplifier_sign      dlon  \\\n",
-       "142  53.937421  55.893298          15616.0                1 -0.037089   \n",
-       "143  56.774035  54.405749           5819.0                1  0.012419   \n",
-       "144  58.517337  53.335749           7634.0                1  0.042846   \n",
-       "145  56.579966  56.089665              NaN                1  0.009032   \n",
-       "146  58.310364  52.594139          17475.0                1  0.039233   \n",
-       "\n",
-       "         dlat         a         c        dist  \n",
-       "142  0.021588  0.000228  0.030204  192.427263  \n",
-       "143 -0.004374  0.000018  0.008430   53.708584  \n",
-       "144 -0.023049  0.000291  0.034138  217.491505  \n",
-       "145  0.025015  0.000163  0.025536  162.692305  \n",
-       "146 -0.035993  0.000459  0.042854  273.022865  "
+       "      city_lon   city_lat  city_population  simplifier_sign        dist  \n",
+       "142  53.937421  55.893298          15616.0                1  192.427263  \n",
+       "143  56.774035  54.405749           5819.0                1   53.708584  \n",
+       "144  58.517337  53.335749           7634.0                1  217.491505  \n",
+       "145  56.579966  56.089665              NaN                1  162.692305  \n",
+       "146  58.310364  52.594139          17475.0                1  273.022865  "
       ]
      },
      "execution_count": 27,
@@ -1191,7 +1180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dist_min = 0.5076134148904117 km, dist_max = 470.86311220265725 km\n"
+      "dist_min = 0.5076134148903368 km, dist_max = 470.8631122026571 km\n"
      ]
     }
    ],
