--- a/points2roads.ipynb
+++ b/points2roads.ipynb
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -764,15 +764,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 227 ms, sys: 295 ms, total: 522 ms\n",
-      "Wall time: 520 ms\n"
+      "CPU times: user 229 ms, sys: 274 ms, total: 503 ms\n",
+      "Wall time: 500 ms\n"
      ]
     }
    ],
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
        "(2342371, 5)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
        "4      0  54.656384  56.06246  31.637903  56.334365"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,15 +902,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 145 ms, sys: 71.5 ms, total: 216 ms\n",
-      "Wall time: 217 ms\n"
+      "CPU times: user 54.6 ms, sys: 37.3 ms, total: 91.9 ms\n",
+      "Wall time: 90 ms\n"
      ]
     }
    ],
@@ -922,15 +922,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 111 ms, sys: 76.2 ms, total: 187 ms\n",
-      "Wall time: 185 ms\n"
+      "CPU times: user 66 ms, sys: 65.2 ms, total: 131 ms\n",
+      "Wall time: 128 ms\n"
      ]
     }
    ],
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
        "(1115049, 6)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,15 +961,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 134 ms, sys: 0 ns, total: 134 ms\n",
-      "Wall time: 132 ms\n"
+      "CPU times: user 102 ms, sys: 4.98 ms, total: 107 ms\n",
+      "Wall time: 104 ms\n"
      ]
     }
    ],
@@ -983,15 +983,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 14.1 ms, sys: 5.18 ms, total: 19.3 ms\n",
-      "Wall time: 17.3 ms\n"
+      "CPU times: user 14.7 ms, sys: 0 ns, total: 14.7 ms\n",
+      "Wall time: 12.4 ms\n"
      ]
     }
    ],
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
        "(227909, 6)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,30 +1022,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f_dist(df, col_lat_1, col_lon_1, col_lat_2, col_lon_2, col_dist):\n",
+    "    \n",
+    "    lat_1 = math.pi/180 * df[col_lat_1].to_numpy()\n",
+    "    lon_1 = math.pi/180 * df[col_lon_1].to_numpy()\n",
+    "    lat_2 = math.pi/180 * df[col_lat_2].to_numpy()\n",
+    "    lon_2 = math.pi/180 * df[col_lon_2].to_numpy()\n",
+    "    \n",
+    "    dlon = lon_1 - lon_2\n",
+    "    dlat = lat_1 - lat_2\n",
+    "    a = np.sin(dlat/2)**2 + np.cos(lat_1) * np.cos(lat_2) * np.sin(dlon/2)**2\n",
+    "    c = 2 * np.arcsin(np.sqrt(a))\n",
+    "    dist = c * 6371.009\n",
+    "    \n",
+    "    df[col_dist] = dist\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 59.5 ms, sys: 3.64 ms, total: 63.2 ms\n",
-      "Wall time: 61 ms\n"
+      "CPU times: user 489 ms, sys: 59.6 ms, total: 549 ms\n",
+      "Wall time: 487 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "data_points2roads['dlon'] = math.pi/180 * (data_points2roads['road_lon'] - data_points2roads['lon'])\n",
-    "data_points2roads['dlat'] = math.pi/180 * (data_points2roads['road_lat'] - data_points2roads['lat'])\n",
-    "data_points2roads['a'] = np.sin(data_points2roads['dlat']/2)**2 + np.cos(math.pi/180 * data_points2roads['road_lat']) * np.cos(math.pi/180 * data_points2roads['lat']) * np.sin(data_points2roads['dlon']/2)**2\n",
-    "data_points2roads['c'] = 2 * np.arcsin(np.sqrt(data_points2roads['a']))\n",
-    "data_points2roads['dist'] = data_points2roads['c'] * 6371.009"
+    "data_points2roads = f_dist(data_points2roads, 'road_lat', 'road_lon', 'lat', 'lon', 'dist')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1069,100 +1089,64 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>11986</th>\n",
-       "      <th>11990</th>\n",
-       "      <th>12026</th>\n",
-       "      <th>12151</th>\n",
-       "      <th>12152</th>\n",
+       "      <th>index</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>road_lon</th>\n",
+       "      <th>road_lat</th>\n",
+       "      <th>simplifier_sign</th>\n",
+       "      <th>dist</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>index</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>lat</th>\n",
+       "      <th>11986</th>\n",
+       "      <td>0</td>\n",
        "      <td>54.656384</td>\n",
-       "      <td>54.656384</td>\n",
-       "      <td>54.656384</td>\n",
-       "      <td>54.656384</td>\n",
-       "      <td>54.656384</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>lon</th>\n",
-       "      <td>56.062460</td>\n",
-       "      <td>56.062460</td>\n",
-       "      <td>56.062460</td>\n",
-       "      <td>56.062460</td>\n",
-       "      <td>56.062460</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>road_lon</th>\n",
+       "      <td>56.06246</td>\n",
        "      <td>51.208425</td>\n",
-       "      <td>51.120501</td>\n",
-       "      <td>51.702642</td>\n",
-       "      <td>51.220868</td>\n",
-       "      <td>51.227666</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>road_lat</th>\n",
        "      <td>52.849901</td>\n",
-       "      <td>52.864984</td>\n",
-       "      <td>52.765198</td>\n",
-       "      <td>52.847263</td>\n",
-       "      <td>52.845825</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>simplifier_sign</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>dlon</th>\n",
-       "      <td>-0.084719</td>\n",
-       "      <td>-0.086253</td>\n",
-       "      <td>-0.076093</td>\n",
-       "      <td>-0.084502</td>\n",
-       "      <td>-0.084383</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>dlat</th>\n",
-       "      <td>-0.031529</td>\n",
-       "      <td>-0.031266</td>\n",
-       "      <td>-0.033007</td>\n",
-       "      <td>-0.031575</td>\n",
-       "      <td>-0.031600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>a</th>\n",
-       "      <td>0.000875</td>\n",
-       "      <td>0.000893</td>\n",
-       "      <td>0.000779</td>\n",
-       "      <td>0.000873</td>\n",
-       "      <td>0.000871</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>c</th>\n",
-       "      <td>0.059168</td>\n",
-       "      <td>0.059792</td>\n",
-       "      <td>0.055821</td>\n",
-       "      <td>0.059086</td>\n",
-       "      <td>0.059041</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>dist</th>\n",
+       "      <td>1</td>\n",
        "      <td>376.961471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11990</th>\n",
+       "      <td>0</td>\n",
+       "      <td>54.656384</td>\n",
+       "      <td>56.06246</td>\n",
+       "      <td>51.120501</td>\n",
+       "      <td>52.864984</td>\n",
+       "      <td>1</td>\n",
        "      <td>380.933121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12026</th>\n",
+       "      <td>0</td>\n",
+       "      <td>54.656384</td>\n",
+       "      <td>56.06246</td>\n",
+       "      <td>51.702642</td>\n",
+       "      <td>52.765198</td>\n",
+       "      <td>1</td>\n",
        "      <td>355.633692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12151</th>\n",
+       "      <td>0</td>\n",
+       "      <td>54.656384</td>\n",
+       "      <td>56.06246</td>\n",
+       "      <td>51.220868</td>\n",
+       "      <td>52.847263</td>\n",
+       "      <td>1</td>\n",
        "      <td>376.434978</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12152</th>\n",
+       "      <td>0</td>\n",
+       "      <td>54.656384</td>\n",
+       "      <td>56.06246</td>\n",
+       "      <td>51.227666</td>\n",
+       "      <td>52.845825</td>\n",
+       "      <td>1</td>\n",
        "      <td>376.147636</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1170,39 +1154,40 @@
        "</div>"
       ],
       "text/plain": [
-       "                      11986       11990       12026       12151       12152\n",
-       "index              0.000000    0.000000    0.000000    0.000000    0.000000\n",
-       "lat               54.656384   54.656384   54.656384   54.656384   54.656384\n",
-       "lon               56.062460   56.062460   56.062460   56.062460   56.062460\n",
-       "road_lon          51.208425   51.120501   51.702642   51.220868   51.227666\n",
-       "road_lat          52.849901   52.864984   52.765198   52.847263   52.845825\n",
-       "simplifier_sign    1.000000    1.000000    1.000000    1.000000    1.000000\n",
-       "dlon              -0.084719   -0.086253   -0.076093   -0.084502   -0.084383\n",
-       "dlat              -0.031529   -0.031266   -0.033007   -0.031575   -0.031600\n",
-       "a                  0.000875    0.000893    0.000779    0.000873    0.000871\n",
-       "c                  0.059168    0.059792    0.055821    0.059086    0.059041\n",
-       "dist             376.961471  380.933121  355.633692  376.434978  376.147636"
+       "       index        lat       lon   road_lon   road_lat  simplifier_sign  \\\n",
+       "11986      0  54.656384  56.06246  51.208425  52.849901                1   \n",
+       "11990      0  54.656384  56.06246  51.120501  52.864984                1   \n",
+       "12026      0  54.656384  56.06246  51.702642  52.765198                1   \n",
+       "12151      0  54.656384  56.06246  51.220868  52.847263                1   \n",
+       "12152      0  54.656384  56.06246  51.227666  52.845825                1   \n",
+       "\n",
+       "             dist  \n",
+       "11986  376.961471  \n",
+       "11990  380.933121  \n",
+       "12026  355.633692  \n",
+       "12151  376.434978  \n",
+       "12152  376.147636  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_points2roads.head().T"
+    "data_points2roads.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dist_min = 0.7620252340087279 km, dist_max = 472.7870983188284 km\n"
+      "dist_min = 0.7620252340092174 km, dist_max = 472.7870983188283 km\n"
      ]
     }
    ],
