--- a/Moscow/Moscow Malls.ipynb
+++ b/Moscow/Moscow Malls.ipynb
@@ -378,7 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_malls.to_csv('data_malls.csv', sep=';', index=False)"
+    "data_malls.to_csv('data_moscow_malls.csv', sep=';', index=False)"
    ]
   },
   {
