--- a/points2points.ipynb
+++ b/points2points.ipynb
@@ -2029,9 +2029,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new_env",
+   "display_name": "env_geo",
    "language": "python",
-   "name": "name_env"
+   "name": "env_geo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2043,7 +2043,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
